--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
-  "main": "index.js",
+  "main": "server/server.js",
   "devDependencies": {},
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:3005",
   "bugs": {
     "url": "https://github.com/BlakeMAdams/friendshipRobots/issues"
   },
