--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^4.0.0",
     "env": "^0.0.2",
     "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "massive": "^4.0.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
